deploy/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: tracing-system
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: http
